# chaos_theory_RandNumGen

./: Cargo.toml  package-lock.json  scratch.md
src/: lib.rs
test/: index.html
test/next/: package-lock.json  package.json
test/next/src/app/: page.tsx
test/web/: index.html  package-lock.json  package.json
test/web/src/: main.d.ts  main.ts  renderer.ts
web/: index.html
